[gd_scene load_steps=8 format=2]

[ext_resource path="res://Biblioteca/sala de aula fundo.jpg" type="Texture" id=1]
[ext_resource path="res://Scenes/SalaES.gd" type="Script" id=2]
[ext_resource path="res://Biblioteca/BotaoCarreira.png" type="Texture" id=3]
[ext_resource path="res://Biblioteca/BotaoUniversidade.png" type="Texture" id=4]
[ext_resource path="res://Biblioteca/BotaoÁreaDeTrabalho.png" type="Texture" id=5]
[ext_resource path="res://Biblioteca/BotaoInstagram.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Interface/Menu/BotãoX.png" type="Texture" id=7]

[node name="Node2D" type="Node2D"]
position = Vector2( -316, -144 )
scale = Vector2( 2.59045, 2.26882 )
script = ExtResource( 2 )

[node name="SalaDeAulaFundo" type="Sprite" parent="."]
position = Vector2( 491, 298 )
scale = Vector2( 1.598, 1.374 )
texture = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0.996078, 0.886275, 0.65098, 1 )
margin_left = 383.0
margin_top = 144.0
margin_right = 850.0
margin_bottom = 366.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonCarreiraES" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 300.0
margin_top = 150.0
margin_right = 892.0
margin_bottom = 189.0
text = "https://www.undb.edu.br/blog/as-4-melhores-areas-de-atuacao-do-engenheiro-de-software"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonUnivES" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 444.0
margin_top = 210.0
margin_right = 750.0
margin_bottom = 248.0
text = "https://www.inteli.edu.br/engenharia-de-software/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonAreatrabES" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 447.0
margin_top = 267.0
margin_right = 775.0
margin_bottom = 301.0
text = "https://www.napratica.org.br/profissao-engenheiro-de-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonES" type="Button" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 455.0
margin_top = 321.0
margin_right = 807.0
margin_bottom = 359.0
text = "https://instagram.com/dafcoding"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotaoCarreira" type="Sprite" parent="."]
position = Vector2( 610, 171 )
scale = Vector2( 0.1, 0.08 )
texture = ExtResource( 3 )

[node name="BotaoInstagram" type="Sprite" parent="."]
position = Vector2( 615, 348 )
scale = Vector2( 0.1, 0.08 )
texture = ExtResource( 6 )

[node name="BotaoUniversidade" type="Sprite" parent="."]
position = Vector2( 612, 188 )
scale = Vector2( 0.1, 0.08 )
texture = ExtResource( 4 )

[node name="BotaoáreaDeTrabalho" type="Sprite" parent="."]
position = Vector2( 616, 292 )
scale = Vector2( 0.1, 0.08 )
texture = ExtResource( 5 )

[node name="ButtonVoltarES" type="Button" parent="."]
margin_left = 814.0
margin_top = 97.0
margin_right = 847.0
margin_bottom = 126.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fecharbotao-removebg-preview" type="Sprite" parent="."]
position = Vector2( 830.358, 111.952 )
scale = Vector2( 0.0954239, 0.0783342 )
texture = ExtResource( 7 )

[connection signal="pressed" from="ButtonCarreiraES" to="." method="_on_ButtonCarreiraES_pressed"]
[connection signal="pressed" from="ButtonUnivES" to="." method="_on_ButtonUnivES_pressed"]
[connection signal="pressed" from="ButtonAreatrabES" to="." method="_on_ButtonAreatrabES_pressed"]
[connection signal="pressed" from="ButtonES" to="." method="_on_ButtonES_pressed"]
[connection signal="pressed" from="ButtonVoltarES" to="." method="_on_ButtonVoltarES_pressed"]
